unit test to reproduce 17613

--- a/components/camel-sql/src/test/resources/log4j2.properties
+++ b/components/camel-sql/src/test/resources/log4j2.properties
@@ -23,6 +23,11 @@ appender.file.layout.pattern = %d [%-15.15t] %-5p %-30.30c{1} - %m%n
 appender.out.type = Console
 appender.out.name = out
 appender.out.layout.type = PatternLayout
-appender.out.layout.pattern = [%30.30t] %-30.30c{1} %-5p %m%n
+appender.out.layout.pattern = %d %t %-5p %-30.30c{1}%M - %m%n
+#appender.out.layout.pattern = [%30.30t] %-30.30c{1} %-5p %m%n
 rootLogger.level = INFO
-rootLogger.appenderRef.file.ref = file
+rootLogger.appenderRef.file.ref =  out
+logger.jdbc.name=org.apache.camel.processor.aggregate.jdbc.JdbcAggregationRepository
+logger.jdbc.level= DEBUG
+logger.tx.name=com.atomikos
+logger.tx.level= DEBUG
